<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent">
            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                

                <EditText
                    android:id="@+id/idToPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/transid"
                    android:paddingTop="@dimen/form_top" />

               <EditText
                    android:id="@+id/summToPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/qiwisumm"
                    android:paddingTop="@dimen/form_top" >

                </EditText>

                <EditText
                    android:id="@+id/commentToPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/comtoqiwi"
                    android:inputType="textMultiLine"
                    android:paddingTop="@dimen/form_top" />

                <Button
            android:id="@+id/payBT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Отправить" />

            </LinearLayout>
			</ScrollView>

</LinearLayout>
