<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/five" >

        <TextView
            android:id="@+id/fullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/frame"
            android:gravity="center_horizontal"
            android:padding="@dimen/five"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/frame"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/account" />

    <TextView
        android:id="@+id/account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/frame"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/holdings"
                android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/addHolding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="@dimen/margin"
                    android:drawableLeft="@drawable/add"
                    android:gravity="center_vertical"
                    android:padding="@dimen/five"
                    android:text="@string/new_holding" />

            <TextView
                android:id="@+id/gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/margin"
                android:drawableLeft="@drawable/gold_bullion"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/five"
                android:text="@string/gold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
